--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 /* End of General Styles*/
 
 /* Styles of Section Main */
-.main {
+main {
     grid-area: main;
     display: flex;
     align-items: center;
@@ -73,7 +73,7 @@ body {
     flex-direction: column;
     gap: 1px;
     inline-size: 100%;
-    max-inline-size: 240px;
+    max-inline-size: 320px;
     background-color: var(--bg-grey-800);
     padding: 32px;
     border-radius: 8px;
@@ -101,25 +101,22 @@ body {
     gap: 4px;
 }
 
-.profile__user q {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-}
-
 .user__name {
-    font-size: 1rem;
+    font-size: 1.4rem;
     font-weight: 400;
 }
 
 .user__location {
     color: var(--bg-green);
     font-weight: 400;
-    font-size: .6rem;
+    font-size: .8rem;
 }
 
 .user__ocupation {
-    font-size: .6rem;
+    font-size: .8rem;
     font-weight: 400;
+    margin-top: 2rem;
+    margin-bottom: 1.4rem;
 }
 
 .social-networks {
