--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     --bg-grey-700: hsl(0, 0%, 20%);
     --bg-grey-800: hsl(0, 0%, 12%);
     --bg-grey-900: hsl(0, 0%, 8%);
-    --size-img: 96px
+    --size-img: 88px
 }
 
 /* End of Styles Variables */
@@ -133,7 +133,7 @@ main {
     padding: 15px;
     border-radius: 5px;
     font-weight: 600;
-    font-size: .8rem;
+    font-size: 1rem;
     transition: all 300ms ease;
     cursor: pointer;
 }
